--- a/css/style.css
+++ b/css/style.css
@@ -284,4 +284,29 @@ body {
 
 }
 
+@media (max-width: 600px) {
+	.cabecalhoPrincipal-titulo{
+		text-align: center;
+	}
 
+	.cabecalhoPrincipal-nav-link{
+		text-align: center;
+	}
+
+	.videoSobre-sobre-title{
+		text-align: center;
+	}
+
+	.videoSobre-sobre-item {
+		margin-top: 5px;
+		width: auto;
+		text-align: center;
+	}
+
+	.videoSobre-sobre{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+}
